# openbridge

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: design.md  openbridge_responses_proxy_probe.py  openrouter_apply_patch_probe.py  research.md
docs-site/: mkdocs.yml
docs-site/docs/: architecture.md  compatibility.md  configuration.md  index.md  logging.md
docs/adr/: 0001-tool-virtualization.md  0002-state-previous_response_id.md  0003-optional-tls.md  0004-infer-tools-and-retry-empty-upstream.md  0005-upstream-max-tokens-buffer.md  0006-debug-trace-channel.md  0007-align-apply-patch-tool-schema-with-codex.md  0008-keep-internal-notes-untracked.md
openbridge/: __main__.py  app.py  cli.py  config.py  logging.py  metrics.py  utils.py
openbridge/api/: __init__.py  routes.py
openbridge/clients/: __init__.py  openrouter.py
openbridge/models/: __init__.py  chat.py  errors.py  events.py  responses.py
openbridge/services/: __init__.py  upstream.py
openbridge/state/: __init__.py  base.py  memory.py  redis.py
openbridge/streaming/: __init__.py  bridge.py
openbridge/tools/: __init__.py  builtins.py  registry.py
openbridge/trace/: __init__.py  base.py  memory.py  redis.py  sanitize.py
openbridge/translate/: __init__.py  request.py  response.py
tests/: test_api_errors.py  test_cli.py  test_cli_debug.py  test_config.py  test_metrics.py  test_models_chat.py  test_models_responses.py  test_state_memory.py  test_streaming_bridge.py  test_tool_registry.py  test_tools_builtins.py  test_translate_request.py  test_translate_response.py  test_upstream_retry.py  test_utils.py
