[project]
name = "openbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chainlit>=2.9.6",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "loguru>=0.7.3",
    "mkdocs-material>=9.7.1",
    "openai>=2.15.0",
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "orjson>=3.11.5",
    "pre-commit>=4.5.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymdown-extensions>=10.20.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis[hiredis]>=7.1.0",
    "respx>=0.22.0",
    "rich>=14.3.1",
    "ruff>=0.14.14",
    "sse-starlette>=3.2.0",
    "tenacity>=9.1.2",
    "typer>=0.21.1",
    "uvicorn[standard]>=0.40.0",
]
