[project]
name = "openbridge"
version = "0.1.0"
description = "OpenAI Responses API to OpenRouter Chat Completions bridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "loguru>=0.7.3",
    "orjson>=3.11.5",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis[hiredis]>=7.1.0",
    "rich>=14.3.1",
    "sse-starlette>=3.2.0",
    "tenacity>=9.1.2",
    "typer-slim>=0.21.1",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
openbridge = "openbridge.cli:app"

[project.optional-dependencies]
clients = [
    "openai>=2.15.0",
]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
]
docs = [
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.20.1",
]
otel = [
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
]
ui = [
    "chainlit>=2.9.6",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
